Added Documented Character class and all its functions. NEW: Race.h , Character.h , Character.cpp UPDATED : Camera2.cpp , Camera2.h

--- a/MyGraphics/MyGraphics.vcxproj.filters
+++ b/MyGraphics/MyGraphics.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="Source\UI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Character.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Weapon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -99,6 +105,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\UI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Weapon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Race.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
