--- a/MyGraphics/MyGraphics.vcxproj.filters
+++ b/MyGraphics/MyGraphics.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Source\Weapon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Mouse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Race.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Mouse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
