Changed BoundaryCheck into its own .h & .cpp files(Collision.h & .cpp), Updated Planet Navigation UI to interact with ControlPanel Object

--- a/MyGraphics/MyGraphics.vcxproj.filters
+++ b/MyGraphics/MyGraphics.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Source\Mouse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Collision.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -120,6 +123,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Mouse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
