--- a/MyGraphics/MyGraphics.vcxproj.filters
+++ b/MyGraphics/MyGraphics.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="Source\Boss2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\NEnemy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -159,6 +162,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Boss2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\NEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
