-UI Hitbox increased -Health decrease when hit -Boss slime spawn -Boss robot spawn -Monster has individual attack cooldown -Snare Ability -Turret Ability -Added Planet 2 monsters -Added Planet 3 monsters -Implement distance between player and monster -Fixed turret on boss -Fixed rocket on monsters -Bug fixes (reverted from commit 40e9723909841aed17233706570e9120539dff47)

--- a/MyGraphics/MyGraphics.vcxproj
+++ b/MyGraphics/MyGraphics.vcxproj
@@ -115,6 +115,7 @@
     <ClInclude Include="Source\Collision.h" />
     <ClInclude Include="Source\Crate.h" />
     <ClInclude Include="Source\Dialogue.h" />
+    <ClInclude Include="Source\Keyboard.h" />
     <ClInclude Include="Source\Mouse.h" />
     <ClInclude Include="Source\Enemy.h" />
     <ClInclude Include="Source\Projectile.h" />
